# sequence-layers

./: .gitignore  LICENSE  LLM_PYTORCH_CONVERSION_PLAN.md  README.md  conftest.py  pyproject.toml
examples/: bert.py  bert_test.py  conformer.py  conformer_test.py  deep_voice_test.py  listen_attend_spell.py  listen_attend_spell_test.py  mobilenet.py  mobilenet_test.py  t5.py  t5_test.py  tacotron_test.py  transformer.py  transformer_test.py  very_attentive_tacotron.py  very_attentive_tacotron_test.py  wavernn.py  wavernn_test.py
notebooks/: intro.ipynb
sequence_layers/: __init__.py
sequence_layers/abstract/: __init__.py  override_test.py  simple.py  simple_test_base.py  test_utils.py  test_utils_test_base.py  types.py  types_test.py  types_test_base.py
sequence_layers/internal/: types.py
sequence_layers/jax/: README.md  __init__.py  attention.py  attention_functions_test.py  attention_test.py  backend.py  backend_test.py  combinators.py  combinators_test.py  conditioning.py  conditioning_test.py  convolution.py  convolution1d_test.py  convolution2d_test.py  convolution3d_test.py  convolution_test.py  dense.py  dense_test.py  dsp.py  dsp_test.py  export.py  export_test.py  meta.py  normalization.py  normalization_test.py  pooling.py  pooling_test.py  position.py  position_test.py  recurrent.py  recurrent_test.py  sharding.py  signal.py  signal_test.py  simple.py  simple_test.py  test_utils.py  test_utils_test.py  time_varying.py  time_varying_test.py  (+5 more)
sequence_layers/jax/attention/: __init__.py  blockwise_dot_product_self_attention.py  blockwise_dot_product_self_attention_test.py  common.py  common_test.py  dot_product_attention.py  dot_product_attention_test.py  dot_product_self_attention.py  dot_product_self_attention_test.py  dot_product_self_attention_v2.py  dot_product_self_attention_v2_test.py  gmm_attention.py  gmm_attention_test.py  local_dot_product_self_attention.py  local_dot_product_self_attention_test.py  multi_source_dot_product_attention.py  multi_source_dot_product_attention_test.py  shaw_relative_position_embedding.py  shaw_relative_position_embedding_test.py  streaming_dot_product_attention.py  streaming_dot_product_attention_test.py  streaming_local_dot_product_attention.py  streaming_local_dot_product_attention_test.py  t5_relative_position_embedding.py  t5_relative_position_embedding_test.py  test_utils.py  transformer_xl_relative_position_embedding.py
sequence_layers/jax/examples/: gemma3n_audio_encoder.py  gemma3n_audio_encoder_test.py  global_style_token.py  global_style_token_test.py
sequence_layers/mlx/: __init__.py  backend.py  backend_test.py  basic_types.py  dense.py  dense_test.py  init_mapping.py  simple.py  simple_test.py  test_utils.py  test_utils_mlx.py  test_utils_test.py  types.py  types_test.py
sequence_layers/numpy/: __init__.py  types.py  types_test.py
sequence_layers/pytorch/: __init__.py  attention.py  attention_test.py  combinators.py  combinators_test.py  conditioning.py  convolution.py  convolution_test.py  dense.py  dense_test.py  dsp.py  dsp_test.py  normalization.py  normalization_test.py  pooling.py  pooling_test.py  position.py  recurrent.py  recurrent_test.py  simple.py  simple_test.py  specialized_test.py  time_varying.py  types.py  types_test.py  utils_test.py
sequence_layers/specs/: __init__.py  backend.py  backend_behaviors.py  dense.py  dense_behaviors.py  simple.py  simple_behaviors.py  test_utils.py  test_utils_behaviors.py  types.py  types_behaviors.py
sequence_layers/tensorflow/: __init__.py  attention.py  attention_test.py  combinators_test.py  conditioning.py  conditioning_test.py  convolution.py  convolution1d_test.py  convolution2d_test.py  dense.py  dense_test.py  dsp.py  dsp_test.py  normalization.py  normalization_test.py  pooling.py  position.py  position_test.py  recurrent.py  recurrent_test.py  simple.py  simple_test.py  squeeze.py  squeeze_test.py  test_util.py  time_varying.py  time_varying_test.py  types.py  types_test.py  utils.py  utils_test.py
sequence_layers/tensorflow/examples/: bert.py  bert_test.py  conformer_test.py  deep_voice.py  deep_voice_test.py  listen_attend_spell_test.py  mobilenet_test.py  t5.py  t5_test.py  tacotron.py  tacotron_test.py  transformer_test.py  very_attentive_tacotron.py  very_attentive_tacotron_test.py  wavernn_test.py
tensorflow/: __init__.py  attention.py  attention_test.py  combinators.py  convolution_test.py  normalization.py  pooling_test.py  test_util.py  time_varying_test.py
