[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "sequence_layers"
description = "Sequence Layers neural network layer library from Google."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "RJ Skerry-Ryan", email="rjryan@google.com"},
]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
# Installed locally with `pip install -e `
dependencies = [
    "einops",
    "flax",
    "jax",
    "jaxtyping",
    "numpy",
    "recurrentgemma[jax] @ git+https://github.com/google-deepmind/recurrentgemma@main",
    "typeguard==2.13.3",
]

# `version` is automatically set by flit to use `sequence_layers.__version__`
dynamic = ["version"]

[project.urls]
# homepage = ""
repository = "https://github.com/google/sequence-layers"
# changelog = ""
# documentation = ""

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install -e .[dev]`
tensorflow = [
    "attrs",
    "scipy",
    "tensorflow",
    "tf_keras",
]
dev = [
    "absl-py",
    "chex",
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
    "tensorflow",  # JAX tests use TensorFlow.
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
# Flit specific options (files to exclude from the PyPI package).
# If using another build backend (setuptools, poetry), you can remove this
# section.
exclude = [
  # Do not release test files on PyPI
  "**/*_test.py",
  "testdata/**",
]