[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "sequence_layers"
description = "Sequence Layers neural network layer library from Google."
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "RJ Skerry-Ryan", email="rjryan@google.com"},
]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
# Installed locally with `pip install -e `
dependencies = [
    "einops",
    "flax",
    "jax",
    "jaxtyping",
    "numpy",
    "orbax-export",
    "recurrentgemma[jax]>=1.0.1",
    "typeguard==2.13.3",
]

# `version` is automatically set by flit to use `sequence_layers.__version__`
dynamic = ["version"]

[project.urls]
# homepage = ""
repository = "https://github.com/google/sequence-layers"
# changelog = ""
# documentation = ""

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install -e .[dev]`
tensorflow = [
    "attrs",
    "scipy",
    "tensorflow",
    "tf_keras",
]
mlx = [
    "mlx",
]
dev = [
    "absl-py>=2.4.0",
    "chex",
    "orbax",
    "isort",
    "pyink",
    "pylint>=2.6.0",
    "pyrefly>=0.58.0",
    "pytest",
    "pytest-xdist",
    "tensorflow",  # JAX tests use TensorFlow.
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.isort]
profile = "google"
line_length = 80

[tool.pylint.master]
extension-pkg-whitelist = ["mlx", "mlx.core"]

[tool.pylint.format]
indent-string = "  "

[tool.pylint.basic]
no-docstring-rgx = "^(_)?test_|^.*Test$|^__.*__$"

[tool.pylint.messages_control]
disable = [
  "too-many-lines",
  "too-many-ancestors",
  "too-few-public-methods",
  "duplicate-code",
  "too-many-arguments",
  "too-many-locals",
  "too-many-statements",
  "too-many-branches",
  "too-many-positional-arguments",
  "too-many-public-methods",
  "too-many-return-statements",
]



[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
# Flit specific options (files to exclude from the PyPI package).
# If using another build backend (setuptools, poetry), you can remove this
# section.
exclude = [
  # Do not release test files on PyPI
  "**/*_test.py",
  "testdata/**",
]

[tool.pyrefly]
# Pyrefly fails to properly support config: Config without defaults in Flax Modules
# (used in JAX), incorrectly treating them as dataclasses and complaining about
# field ordering. This effectively only impacts JAX files.
errors = { missing-override-decorator = "error", bad-class-definition = "ignore" }